[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "limited-shell"
description = "lshell - Limited Shell"
readme = "README.md"
requires-python = ">=3.6"
license = { text = "GPL-3.0-or-later" }
keywords = ["limited", "shell", "security", "python"]
authors = [{ name = "Ignace Mouzannar", email = "ghantoos@ghantoos.org" }]
maintainers = [{ name = "Ignace Mouzannar", email = "ghantoos@ghantoos.org" }]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Information Technology",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: POSIX",
  "Programming Language :: Python :: 3",
  "Topic :: Security",
  "Topic :: System :: Shells",
  "Topic :: System :: System Shells",
  "Topic :: System :: Systems Administration",
  "Topic :: Terminals",
]
dependencies = ["pyparsing>=3.0.0"]
dynamic = ["version"]

[project.urls]
GitHub = "https://github.com/ghantoos/lshell"
Changelog = "https://github.com/ghantoos/lshell/blob/master/CHANGELOG.md"

[project.scripts]
lshell = "lshell.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["lshell*"]
exclude = ["test", "test.*"]

[tool.setuptools.dynamic]
version = { attr = "lshell.variables.__version__" }

[tool.setuptools.data-files]
"etc" = ["etc/lshell.conf"]
"etc/logrotate.d" = ["etc/logrotate.d/lshell"]
"share/doc/lshell" = ["README.md", "COPYING", "CHANGELOG.md", "SECURITY.md"]
"share/man/man1" = ["man/lshell.1"]
